# wolff2

./: README.md  clock.py  config.py  listen_play_test.py  main.py  pyproject.toml  rami_main.py  requirements.txt
analysis/: ai_visualiser.py
data/: generate_scripted_test.py  scripted_test.py
data/2025_01_31_1309/WOLFF1_block_1_performance_1_mode_1/ai_robot/: AI_Robot_2025_01_31_1309.json
modules/: ai_robot_data_writer.py  ai_robot_visualiser.py  biodata_data_writer.py  bitalino_data_writer.py  bitalino_module.py  bitalino_visualiser.py  brainbit.py  conducter.py  data_writer.py  draw_xarm.py  listener.py  pupil_labs_network.py  pupil_labs_visualiser.py  rami_main.py  randomize_modes.py
nebula/: ai_factory.py  hivemind.py  nebula.py
nebula/ai_training/src/: dl.py  load.py  train_feature2feature.py
nebula/models/: pt_models.py
script_files/: generate_scripted_test.py  logs_for_script.py  opensignals_0021083516D4_2024-11-15_12-02-36.txt  scripted_test.py
tests/: bitalino_for_test.py  bitalino_test.py  brain_bit_test.py  conducter_test.py  dobot_tests.py  emotibit_parse_test.py  emotibit_test.py  ignore.py  listen_play_test.py  nebula_test.py  test_randomize_modes.py  xarm_tests.py
xarm/core/comm/: base.py  socket_port.py
xarm/core/config/: x_code.py  x_config.py
xarm/core/wrapper/: uxbus_cmd.py  uxbus_cmd_ser.py  uxbus_cmd_tcp.py
xarm/tools/: blockly_tool.py
xarm/tools/blockly/: _blockly_base.py  _blockly_handler.py  _blockly_highlight.py  _blockly_tool.py
xarm/wrapper/: xarm_api.py
xarm/x3/: base.py  base_board.py  code.py  events.py  ft_sensor.py  gpio.py  gripper.py  record.py  robotiq.py  servo.py  studio.py  track.py  xarm.py
(+34 files in other folders)
