[tool.poetry]
name = "rami"
version = "0.1.0"
description = ""
authors = ["craigv <vear2ev2.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
art = "^6.1"
numpy = "^1.23.2"
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp310-cp310-win_amd64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu116/torchaudio-0.12.1%2Bcu116-cp310-cp310-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu116/torchvision-0.13.1%2Bcu116-cp310-cp310-win_amd64.whl"}

#[[tool.poetry.source]]
#name = "pytorch"
#url = "https://download.pytorch.org/whl/cpu"
#priority = "explicit"
#
#[tool.poetry.dependencies]
#torch = { url = "https://download.pytorch.org/whl/torch_stable.html/cpu/torch-1.3.1%2Bcpu-cp36-cp36m-win_amd64.whl" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
